# adore_cli

./: .ci  .dockerignore  .gitignore  .tests  Makefile  README.md  adore_cli.env  adore_cli.mk  adore_cli.yaml  ci.env  docker-compose.yaml  package.mk  setup.sh  zenoh_bridge_config.json5  zenoh_router_config.json5
.github/workflows/: adore_cli_ci.yaml  ci.yaml  ci.yml  ci_crosscompile_x86_to_arm64.yaml  ci_native_arm64.yaml  ci_native_x86.yaml  reuse-build.yaml
adore_cli/: .dockerignore  Dockerfile  Dockerfile.adore_cli  Makefile  gather_requirements_files.sh  requirements.adore_cli.system
adore_cli/.tmp/: Makefile
adore_cli/files/: entrypoint.sh  install_zenoh.sh  rsyslog.conf.template  rsyslog_reload.sh
adore_cli_base/: .dockerignore  Dockerfile.adore_cli_base  Makefile
adore_cli_base/files/: .zshrc  entrypoint.sh  (+4 more)
adore_cli_core/: .dockerignore  Dockerfile.adore_cli_core  Makefile  gather_requirements_files.sh  mirror_bench.py  requirements.adore_cli_core.system
docker/: Dockerfile.adore_cli_core  Dockerfile.adore_cli_core_x11_display
ros2_workspace/src/ros2_hello_world/: CMakeLists.txt  README.md  package.xml
ros2_workspace/src/ros2_hello_world/src/: ros2_hello_world.cpp
ros2_workspace/src/ros2_hello_world/test/: hello_world_test.cpp
tools/: adore_cli.sh  adore_cli_help.sh  adore_cli_motd.sh  check_vendor_dependencies.sh  cli_prompt.sh  gather_requirements_files.sh  git_repo_status.sh  requirements_file_change_status.sh  requirements_hashing_util.sh  tag_history_manager.sh  test_ros2_installation.sh  verify_package_hashing.sh
(+9 files in other folders)
